[gd_scene load_steps=5 format=3 uid="uid://b5jqrwjwsgt8g"]

[ext_resource type="Script" path="res://scripts/core/Main.gd" id="1_08afo"]
[ext_resource type="PackedScene" uid="uid://dkl3gud7qjwxv" path="res://scenes/SolarSystem.tscn" id="2_uyfuf"]
[ext_resource type="PackedScene" uid="uid://c6aqg0xqk0y7x" path="res://scenes/ui/ModernUI.tscn" id="3_s07k1"]
[ext_resource type="Script" path="res://scripts/core/GameManager.gd" id="4_t5x0c"]

[node name="Main" type="Node2D"]
script = ExtResource("1_08afo")

[node name="GameCamera" type="Camera2D" parent="."]
position_smoothing_enabled = true

[node name="SolarSystem" parent="." instance=ExtResource("2_uyfuf")]

[node name="UICanvasLayer" type="CanvasLayer" parent="."]

[node name="ModernUI" parent="UICanvasLayer" instance=ExtResource("3_s07k1")]

[node name="GameManager" type="Node" parent="."]
script = ExtResource("4_t5x0c")

[node name="AudioManager" type="Node" parent="."]
comment = "Placeholder for AudioManager node if needed in the future"